# comp3297-betatrax

./: .gitignore  DEMO_GUIDE.md  README.md  db.sqlite3  demo_setup.py  manage.py  project_description.txt  pyproject.toml  schema.yml
betatrax/: asgi.py  settings.py  urls.py  wsgi.py
customers/: apps.py  models.py
customers/migrations/: 0001_initial.py
defects/: admin.py  models.py  po_views.py  serializers.py  services.py  tests_automated.py  urls.py  views.py
defects/migrations/: 0001_initial.py  0002_defectreport_approved_at_defectreport_approved_by_and_more.py  0003_defectreport_rejected_at_defectreport_rejected_by_and_more.py  0003_remove_product_owner_employee_and_more.py  0004_defectreport_reopen_reason_defectreport_reopened_at_and_more.py  0005_defectreport_cannot_reproduce_reason_and_more.py  0006_merge_0003_remove_product_owner_employee_and_more_0005_defectreport_cannot_reproduce_reason_and_more.py
